--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,9 @@ body {
 a {
   color: inherit;
 } 
+
+#root{
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
+}
