--- a/src/pages/cadastro/Categoria/index.css
+++ b/src/pages/cadastro/Categoria/index.css
@@ -1,27 +1,29 @@
-import styled from "styled-components";
-
-const Button = styled.button`
+.formCategoria {
+  justify-content: center;
+  text-align: center;
+}
+h1{
+  font-size: 20px;
+} 
+.Button{
   color: var(--white);
   background-color: var(--black);
   border: 1px solid var(--white);
   box-sizing: border-box;
   cursor: pointer;
-  padding: 20px 24px;
+  padding: 16px 24px;
   font-style: normal;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 16px;
   outline: none;
   border-radius: 5px;
   text-decoration: none;
   display: inline-block;
   transition-property: border, color;
-  transition-duration: .5s;
-
-  &:hover,
-  &:focus {
+  transition-duration: .3s;
+}
+.Button:hover,
+.Button:focus {
   color: var(--primary);
   border-color: var(--primary);
-  }
-`;
-
-export default Button;
+}
